Fixed research page spacing

--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -245,6 +245,8 @@ img {
   grid-template-columns: 70% 30%;
   grid-template-rows: auto;
   grid-gap: 10px;
+  margin-top: 20px;
+  margin-right: 20px;
 }
 .palmarescontainer {
   grid-template-columns:33% 33% 33%;
